# CSE121-S24

./: README.md
lab1/lab1_2/main/: hello_world_main.c
lab1/lab1_3/: CMakeLists.txt  sdkconfig
lab1/lab1_3/main/: .blink-gpt-ex.c.swp  CMakeLists.txt  blink-gpt-ex.c
lab2/: README.md  assemblyNotes.asm
lab2/lab2_2/: sdkconfig.old
lab2/lab2_2/main/: lab2_2.c
lab3/lab3_2/: sdkconfig.old
lab3/lab3_2/main/: CMakeLists.txt  lab3_2.cpp
lab3/lab3_3/main/: .CMakeLists.txt.swp  .DFRobot_LCD.cpp.swp  .lab3_3.cpp.swp  .temp.c.swp  CMakeLists.txt  DFRobot_LCD.cpp  DFRobot_LCD.h  lab3_3.cpp  temp.c
lab4/lab4_1/main/: lab4_1.c  templab4_1.c
lab4/lab4_2/main/: CMakeLists.txt  lab4_2.c
lab4/lab4_3/main/: CMakeLists.txt  lab4_1.c  lab4_3.c
lab5/: README.md
lab5/lab5_1/: README.txt  morse  morse.c
lab5/lab5_2/main/: continuous_read_main.c  morseReader  morseReader.c
lab6/lab6_1/: CMakeLists.txt
lab6/lab6_1/main/: CMakeLists.txt  lab6_1.c  temp.c  templab6_1.c
lab7/lab7_1/: sdkconfig  sdkconfig.old
lab7/lab7_1/main/: https_request_example_main.c
lab7/lab7_2/: sdkconfig  sdkconfig.old
lab7/lab7_2/main/: .test.c.swp  lab7_2.c
lab7/lab7_3/: .gdbinit  partitions.csv  sdkconfig  sdkconfig.old
lab7/lab7_3/main/: CMakeLists.txt  https_request_example_main.c  lab7_3.c  temp.c
lab7/raspberry pi/: .app7_3.py.swp  app7_2.py  app7_3.py  index.html
